methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:40: error: ambiguous reference to overloaded definition,
both method paint in class PatternPicture of type ()Unit
and  method paint in class PatternPicture of type ()Unit
match argument types ()
  paint()
  ^PatternPicture:45: error: ambiguous reference to overloaded definition,
both method paint in class PatternPicture of type ()Unit
and  method paint in class PatternPicture of type ()Unit
match argument types ()
  paint()
  ^PatternPicture:53: error: ambiguous reference to overloaded definition,
both method paint in class PatternPicture of type ()Unit
and  method paint in class PatternPicture of type ()Unit
match argument types ()
  paint()
  ^PatternPicture:57: error: ambiguous reference to overloaded definition,
both method paint in class PatternPicture of type ()Unit
and  method paint in class PatternPicture of type ()Unit
match argument types ()
  paint()
  ^PatternPicture:118: error: ambiguous reference to overloaded definition,
both method paint in class PatternPicture of type ()Unit
and  method paint in class PatternPicture of type ()Unit
match argument types ()
             paint()
             ^PatternPicture:122: error: ambiguous reference to overloaded definition,
both method paint in class PatternPicture of type ()Unit
and  method paint in class PatternPicture of type ()Unit
match argument types ()
             paint()
             ^PatternPicture:126: error: ambiguous reference to overloaded definition,
both method paint in class PatternPicture of type ()Unit
and  method paint in class PatternPicture of type ()Unit
match argument types ()
             paint()
             ^PatternPicture:131: error: method paint is defined twice
  conflicting symbols both originated in file 'plm.runtime44.PatternPicture'
def paint() {brushDown()
    ^PatternPicture:89: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime44.PatternPicture'
override def run() {
             ^